# Crehana-API

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/application/services/: auth_service.py  board_service.py  task_service.py  user_service.py
app/core/: api.py  constants.py  database.py  dependencies.py  settings.py
app/domain/entities/: board.py  task.py  user.py
app/domain/repositories/: auth_repository.py  board_repository.py  task_repository.py  user_repository.py
app/infrastructure/: dependencies.py
app/infrastructure/repositories/: auth_repository.py  board_repository.py  task_repository.py  user_repository.py
app/infrastructure/routers/: auth_router.py  board_router.py  task_router.py  user_router.py
app/utils/: auth.py  datetime.py
compose/fast_api/: Dockerfile  entrypoint.sh  start.sh
